# desi-lensing

./: PLOT_MAGNITUDES_README.md  RANDOMS_README.md  README.md  compute_all_lensing.sh  cut_catalogues.sh  cut_catalogues_to_footprint.py  cut_source_surveys.py  example_plot_magnitudes.py  mkcat_decade.py  plot_all.sh  pyproject.toml  submit_mkCat.sh  test_multi_galaxy.py  test_randoms_integration.py
desi_lensing/: __init__.py  constants.py
desi_lensing/analysis/: __init__.py  plotting.py  plotting_utils.py  randoms.py
desi_lensing/cli/: __init__.py  config_converter.py  main.py
desi_lensing/config/: __init__.py  analysis.py  base.py  computation.py  lens_galaxy.py  output.py  path_manager.py  plot.py  source_survey.py  validation.py  validation_helpers.py
desi_lensing/core/: __init__.py  base.py  computation.py  pipeline.py
desi_lensing/data/: __init__.py  loader.py
desi_lensing/utils/: __init__.py  computation_utils.py  fastspecfit_utils.py  logging_utils.py  version_utils.py
docs/: plotting_migration.md
examples/: analysis_config_example.py  basic_usage.py  plotting_example.py
old_plotting_codes/: bayes_fits_for_chris.py  blur_plot.py  boost_factor.py  compare_magnification_bias_to_sims.py  config_plots.conf  config_plots_bayesian.conf  config_plots_boost.conf  config_plots_hscy1.conf  config_plots_hscy1_vs_y3.conf  config_plots_nowsys.conf  config_plots_prekp3.conf  data_handler.py  delta_z_effects.py  fit_darkemu_Mmin.py  get_signal_to_noise.py  make_overlap_table.py  outlier_tables.py  plot_all.py  plot_boost.py  plot_covariance.py  plot_datavector.py  plot_footprints.py  plot_footprints_y3_dirty.py  plot_magnification_bias.py  plot_magnitudes.py  plot_masscuts.ipynb  plot_nofz.py  plot_notomo_measurement_vs_compressed.py  plot_ntile_vs_mass.py  plot_reference_dvs.py  plot_sigma_sys.py  plot_split_footprints.py  plot_splits.py  plot_sys_weights.py  plot_weights.py  plot_wp.py  plotting_utilities.py  randoms.py  secondary_effects.py  shapenoise.py  (+7 more)
scripts/: submit_all_lensing.sh
