# pyproject.toml

[build-system]
# Specifies the build tools pip needs to run the installation.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Core metadata that defines your package.
name = "desi-lensing"
version = "2.1.0" # Version bumped to reflect packaging fix
description = "DESI Galaxy-Galaxy Lensing Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DESI Lensing Team", email = "desi-lensing@desi.lbl.gov"}
]
keywords = ["cosmology", "lensing", "desi", "galaxy-surveys"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

# Runtime dependencies needed for your code to run.
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "healpy",
    "configparser",
    "tqdm",
    "pyyaml",
    "click",
    "dsigma",
]

[project.scripts]
# This creates the 'desi-lensing' command-line tool.
desi-lensing = "desi_lensing.cli.main:main"

[tool.setuptools.packages.find]
# This section is CRITICAL. It tells the build system where to find
# your actual Python source code to include in the package.
where = ["."]
include = ["desi_lensing*"]
