# pyproject.toml

[build-system]
# Specifies the build tools pip needs to run the installation.
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Core metadata that defines your package.
name = "desi-lensing"
version = "0.1.1" # Version bumped to reflect packaging fix
description = "DESI Galaxy-Galaxy Lensing Analysis Pipeline"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Gnu General Public"}
authors = [
    {name = "Sven Heydenreich", email = "sheydenr@ucsc.edu"}
]
keywords = ["cosmology", "lensing", "desi", "galaxy-surveys"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public",
    "Programming Language :: Python :: 3",
]

# Runtime dependencies needed for your code to run.
dependencies = [
    "numpy",
    "scipy",
    "astropy",
    "healpy",
    "configparser",
    "tqdm",
    "pyyaml",
    "click",
    "dsigma",
]

[project.scripts]
# This creates the 'desi-lensing' command-line tool.
desi-lensing = "desi_lensing.cli.main:main"

[tool.setuptools]
# Explicitly list packages to avoid discovery issues in containerized environments.
packages = [
    "desi_lensing",
    "desi_lensing.analysis",
    "desi_lensing.cli",
    "desi_lensing.config",
    "desi_lensing.core",
    "desi_lensing.data",
    "desi_lensing.utils"
]
